[package]
name = "bastion_f"
version = "0.0.2"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
argon2 = "0.5.3"
zeroize = { version = "1.7.0", features = ["derive"] }
rand = "0.8.5"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
lz4_flex = "0.11.2"
rayon = "1.10.0"
clap = { version = "4.5.4", features = ["derive"] }
rpassword = "7.3.0"
indicatif = "0.17.8"
anyhow = "1.0"
hmac = "0.12.1"
console = "0.15.8"