[package]
name = "bastion_f"
version = "0.0.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
clap = { version = "4.5.4", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hkdf = "0.12"
indicatif = "0.17.8"
rand = "0.8.5"
rayon = "1.10.0"
rpassword = "7.3.0"
sha2 = "0.10.8"
zeroize = { version = "1.7.0", features = ["derive"] }
atty = "0.2"
